# rust-playground

docker-minimal/: Cargo.toml  Dockerfile  README.md
docker-redis/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
docker-redis/src/: main.rs
