[package]
name = "docker-redis"
version = "0.1.0"
authors = ["Kacper Golinski <kacper.golinski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deadpool-redis = "0.5.2"
tokio = { version = "0.2.22", features = ["macros"] }
